# panda

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: pages.yml
agents/: openai.yaml
references/: evaluation-findings.md  evaluation-hard-local.md  evaluation-nightly.md  panda-v2-philosophy.md  prompt-patterns.md  research-foundations.md
references/evaluation-results/: README.md
references/evaluation-results/20260525-hard-local/: ansible-codex_alone_scout-result.json  canary_result.json  candidate_manifest.json  element-web-codex_alone_scout-result.json  flipt-audit-panda_replay-result.json  flipt-codex_alone_scout-result.json  flipt-ecr-codex_alone_scout-result.json  flipt-ecr-panda_replay-result.json  navidrome-codex_alone_scout-result.json  navidrome-player-userid-codex_alone_scout-result.json  navidrome-player-userid-panda_replay-result.json  navidrome-player-userid-panda_replay_second_pass-result.json  qutebrowser-codex_alone_scout-result.json  run_manifest.json  summary.json  vuls-cvss-codex_alone_scout-result.json
references/evaluation-results/20260525-nightly/: codex_alone.panda-20260525-codex-alone.json  codex_alone.panda-20260525-pytest-codex-alone.json  (+1 more)
scripts/: consult_ai_team.py  panda_eval.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/pages/: index.astro
src/panda_v2/: __init__.py  artifacts.py  contracts.py  extractors.py  prompts.py
tests/: test_consult_ai_team.py  test_panda_eval.py  test_panda_v2.py
(+13 files in other folders)
